syntax = "proto3";

package gamerspb;

message GamerCreated {
  string id =1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}